--- a/ve-xem-phim/Views/Home/Index.cshtml
+++ b/ve-xem-phim/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<ve_xem_phim.Models.Movie>
+
+@{
+    ViewData["Title"] = "Phim Đang Chiếu";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-4">
+    <h2 class="text-center mb-4">Phim Đang Chiếu</h2>
+    <div class="row">
+        @foreach (var movie in Model)
+        {
+            @if (movie.IsActive)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 shadow-sm">
+                        <img src="@movie.Url" class="card-img-top mx-auto" alt="@movie.Title" style="width: 100%; height: 240px; object-fit: cover;">
+                        <div class="card-body">
+                            <h5 class="card-title">@movie.Title</h5>
+                            <p class="card-text">@movie.Description</p>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="/Movies/Details/@movie.Id" class="btn btn-primary">Xem Chi Tiết</a>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
 </div>
