--- a/ve-xem-phim/Views/Ticket/ListMovie.cshtml
+++ b/ve-xem-phim/Views/Ticket/ListMovie.cshtml
@@ -8,7 +8,7 @@
     <h2 class="text-center mb-4">Phim Đang Chiếu</h2>
 
     <!-- Thanh tìm kiếm với bộ lọc danh mục -->
-    <form asp-controller="Home" asp-action="Index" method="post" class="mb-4">
+    <form asp-controller="Ticket" asp-action="ListMovie" method="post" class="mb-4">
         <div class="row g-2">
             <div class="col-md-6">
                 <input type="text" name="name" class="form-control" placeholder="Tìm kiếm phim..." value="@ViewData["SearchString"]">
@@ -38,13 +38,14 @@
             {
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="@movie.Url" class="card-img-top mx-auto" alt="@movie.Title" style="width: 100%; height: 240px; object-fit: contain;">
+                        <img src="@movie.Url" class="card-img-top mx-auto" alt="@movie.Title" style="width: 100%; height: 240px; object-fit: cover;">
                         <div class="card-body">
                             <h5 class="card-title">@movie.Title</h5>
                             <p class="card-text">@movie.Description</p>
                         </div>
                         <div class="card-footer text-center">
-                            <a href="/Home/MovieDetails/@movie.Id" class="btn btn-primary">Xem Chi Tiết</a>
+                            <a asp-controller="Ticket" asp-action="AddTickets" asp-route-movieId="@movie.Id" class="btn btn-primary">Thêm vé</a>
+                            <a asp-controller="Ticket" asp-action="GetRoomsAndShowtimes" asp-route-movieId="@movie.Id" class="btn btn-primary">Suất chiếu</a>
                         </div>
                     </div>
                 </div>
