--- a/ve-xem-phim/Views/Shared/_Layout.cshtml
+++ b/ve-xem-phim/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (User.IsInRole("Admin"))
+                        @if (User.IsInRole("Admin") || User.IsInRole("User"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="ListMovie">Ticket</a>
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Register">Register</a>
                             </li>
+                        }
+                        @if (User.Identity.IsAuthenticated){
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MyTickets">Cart</a>
                         }
                         
                     </ul>
