--- a/ve-xem-phim/Views/Home/MovieDetails.cshtml
+++ b/ve-xem-phim/Views/Home/MovieDetails.cshtml
@@ -13,8 +13,8 @@
             <h2>@Model.Title</h2>
             <p><strong>Thể loại:</strong> @Model.Category.Name</p>
             <p>@Model.Description</p>
-            <p><strong>Số vé còn lại:</strong> @Model.Tickets.Count(t => t.Available)</p>
-            <a href="/Home/Ticket?movieId=@Model.Id" class="btn btn-primary">Mua vé</a>
+            <p><strong>Số vé còn lại:</strong> @Model.Tickets.Where(t=>t.Date>=DateTime.Now).Count(t => t.Available)</p>
+            <a href="/Home/GetRoomsAndShowtimes?movieId=@Model.Id" class="btn btn-primary">Mua vé</a>
         </div>
     </div>
 </div>
