--- a/ve-xem-phim/Views/Login/Login.cshtml
+++ b/ve-xem-phim/Views/Login/Login.cshtml
@@ -17,6 +17,7 @@
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Đăng nhập</button>
 </form>
 
