--- a/ve-xem-phim/Views/Home/Ticket.cshtml
+++ b/ve-xem-phim/Views/Home/Ticket.cshtml
@@ -53,6 +53,7 @@
                         <p class="card-text">Phòng: @ticket.Rom</p>
                         <p class="card-text">Giờ chiếu: @ticket.Date</p>
                         <p class="card-text">Giá: @ticket.Price.ToString("N0") VNĐ</p>
+                        <p class="card-text">Khuyến mãi: @(ticket.Promotion?.DiscountPercentage??0) %</p>
                         <a asp-controller="Home" asp-action="BuyTicket" asp-route-ticketId="@ticket.Id" class="btn btn-success">Mua vé</a>
                     </div>
                 </div>
