--- a/ve-xem-phim/Views/Shared/_Layout.cshtml
+++ b/ve-xem-phim/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="List">Category</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Promotion" asp-action="ManagePromotions">Promotion</a>
+                            </li>
                         }
                         else{
                         <li class="nav-item">
