--- a/ve-xem-phim/Views/Ticket/ListMovie.cshtml
+++ b/ve-xem-phim/Views/Ticket/ListMovie.cshtml
@@ -38,7 +38,7 @@
             {
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="@movie.Url" class="card-img-top mx-auto" alt="@movie.Title" style="width: 100%; height: 240px; object-fit: cover;">
+                        <img src="@movie.Url" class="card-img-top mx-auto" alt="@movie.Title" style="width: 100%; height: 240px; object-fit: contain;">
                         <div class="card-body">
                             <h5 class="card-title">@movie.Title</h5>
                             <p class="card-text">@movie.Description</p>
