--- a/ve-xem-phim/Views/Home/MyTickets.cshtml
+++ b/ve-xem-phim/Views/Home/MyTickets.cshtml
@@ -33,7 +33,7 @@ else
                     <td>@Model[i].Date.ToString("dd/MM/yyyy HH:mm")</td>
                     <td>@Model[i].Row @Model[i].Number</td>
                     <td>@Model[i].Price.ToString("N0") VND</td>
-                    <td>@Model[i].Promotion?.DiscountPercentage??0 %</td>
+                    <td>@(Model[i].Promotion?.DiscountPercentage??0) %</td>
                     <td>
                         <a asp-controller="Home" asp-action="RemoveTicket" asp-route-ticketId="@Model[i].Id" class="btn btn-danger btn-sm">Xóa</a>
                     </td>
